<resources>
    <string name="app_name">enterTRAINme</string>
    <string name="fromStation">From</string>
    <string name="toStation">To</string>
    <string name="connection1">Connection 1</string>
    <string name="connection2">Connection 2</string>
    <string name="connection3">Connection 3</string>
    <string name="connection4">Connection 4</string>
    <string name="connection5">Connection 5</string>
    <string name="connection6">Connection 6</string>
    <string name="findConnection">find connection</string>
    <string name="ownerDeveloper">Owner / Developer</string>
    <string name="Marc">Marc Schoch</string>
    <string name="Patrick">Patrick Grünenfelder</string>
    <string name="address">Office address</string>
    <string name="companyName">enterTRAINme</string>
    <string name="street">Examplestrasse 101</string>
    <string name="locationOffice">7000 Chur</string>
    <string name="support">Support</string>
    <string name="supportMail">support@enterTRAINme.com</string>
    <string name="supportNumber">0800 800 800</string>
    <string name="homeAddress">home address</string>
    <string name="favorites">favorites</string>
    <string name="selectAStation">select a station</string>
    <string name="from">from</string>
    <string name="to">to</string>
    <string name="typeHomeAddress">type home address</string>
    <string name="selectAStationOrAddress">select a station or address</string>
    <string name="departureTime">Departure Time</string>
    <string name="arrivalTime">Arrival Time</string>
    <string name="train">Train</string>
    <string name="bus">Bus</string>
    <string name="tram">Tram</string>
    <string name="ship">Ship</string>
    <string name="cableway">Cableway</string>
    <string name="laterConnections">Later Connections</string>
    <string name="lessConnections">Less Connections</string>
</resources>
